--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "sass-demo",
+  "title": "Next.js Sass Starter",
+  "description": "Use Sass to start your Next.js app with CSS superpowers!",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +15,8 @@
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "sass": "^1.32.8"
   }
 }
